# Computer_Vision

Examen/: CMakeLists.txt  main.cpp
Mahalanobis distance/: boronoi.py  exampleNumpy.py  exampleScipy.py  pob.py
Memorama/API/: app.py
Memorama/carpeta_salida/: imagenesUtiles.py  proProcesamiento.py
Memorama/carpeta_salida/chiles/: dataset_chiles.csv  iguales_chiles.txt
Memorama/carpeta_salida/combinaciones/: clasificacion.py  combinaciones.txt  dataset_caracteristicas_combinados.csv
Memorama/carpeta_salida/cucharas/: cucharas.txt  dataset_caracteristicas.csv
Memorama/carpeta_salida/cuchillos/: clasificacion.py  cuchillos.txt  dataset_caracteristicas.csv
Memorama/carpeta_salida/entrenamietno/: clasificadores  clasificadores.py  dataset.csv  extraccion.py  modelo_random_forest.pkl
Memorama/carpeta_salida/limones/: dataset_caracteristicas.csv  limones.txt
Memorama/carpeta_salida/tarjetas/: dataset.csv  junta.py  pares.txt
Memorama/carpeta_salida/tenedores/: dataset_caracteristicas.csv  tenedores.txt
Memorama/memorama/: README.md  angular.json  package-lock.json  package.json
Memorama/memorama/src/app/: app.component.css  app.component.ts  app.config.ts  app.routes.ts
Memorama/memorama/src/app/components/game/: game.component.css  game.component.html  game.component.ts
Memorama/memorama/src/app/components/home/: home.component.css  home.component.html  home.component.ts
Memorama/memorama/src/app/components/scoreboard/: scoreboard.component.css  (+2 more)
Memorama/memorama/src/app/models/: card.ts
Memorama/memorama/src/app/services/: validation.service.ts
Memorama/memorama/src/assets/images/: pairs.json
P1_Supervised_Learning_Classifier/: CMakeLists.txt
P1_Supervised_Learning_Classifier/src/: main.cpp
P2_Supervised_Learning_Classifier/: CMakeLists.txt
P2_Supervised_Learning_Classifier/src/: main.cpp
P3_Supervised_Learning_Classifier_Mahalanobis/: CMakeLists.txt
P3_Supervised_Learning_Classifier_Mahalanobis/include/: Clase.h  matrix.cpp  matrix.h
P3_Supervised_Learning_Classifier_Mahalanobis/src/: main.cpp
P4_Image_Classifier/: Evaluador.py  app.py  aux.py  clasificador.py  secciones_guardadas.json
P4_Image_Classifier/static/css/: estilos.css
P4_Image_Classifier/static/js/: script.js
P4_Image_Classifier/templates/: index.html
P5_Cube/: Cubo.ipynb  Cubo.py
P5_Cube/.ipynb_checkpoints/: Cubo-checkpoint.ipynb
P6_Perceptron_Imagenes/: app.py  clasificador.py  perceptron.py  secciones_guardadas.json
P6_Perceptron_Imagenes/static/css/: estilos.css
P6_Perceptron_Imagenes/static/js/: script.js
P6_Perceptron_Imagenes/templates/: index.html
P7_KMeans/: CMakeLists.txt  main.cpp
P7_KMeans/src/: perceptrop.py  sal.txt
P8_Chain/: CMakeLists.txt  main.cpp
P9_AJ/P9_AJ/: Ascendente.py  run.py
P9_Ascendente/: CMakeLists.txt  main.cpp
Supervised Learning Classifier/src/: main.cpp
(+2 files in other folders)
